crystal-facet-uml (1.16.3) unreleased; urgency=medium

  [ Andreas Warnke ]
  * ...

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 08 Dec 2019 21:30:00 +0100

crystal-facet-uml (1.16.2) unreleased; urgency=medium

  [ Andreas Warnke ]
  * relationships may overlap if same type and same direction
  * title and filename of exported docbook and xhtml equals database file name

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 08 Dec 2019 11:30:00 +0100

crystal-facet-uml (1.16.1) unreleased; urgency=medium

  [ Andreas Warnke ]
  * rpm package build scripts beautified, doc installation excluded from cmake

 -- Andreas Warnke <cfu@andreaswarnke.de>  Tue, 26 Nov 2019 19:30:00 +0100

crystal-facet-uml (1.16.0) unreleased; urgency=medium

  [ Andreas Warnke ]
  * Diagram exports can be triggered from command line
  * Cut + paste of relationships is possible
  * Json format in clipboard slightly modified
    (set renamed to data, order required, relationship src/dst names added)
  * The default classifier size is calculated based on the grid-distances
  * Fix: Scenario based diagrams showing multiple identical classifier
    instances show not too many relationships

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 16 Nov 2019 19:30:00 +0100

crystal-facet-uml (1.15.0) unreleased; urgency=medium

  [ Andreas Warnke ]
  * The id of selected objects is displayed in the edit area
  * Child diagrams are layouted in a grid (in navigation view)

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 20 Oct 2019 12:30:00 +0200

crystal-facet-uml (1.14.2) unreleased; urgency=medium

  [ Andreas Warnke ]
  * gtk is initialized before data and ctrl packages --> fix for wine

 -- Andreas Warnke <cfu@andreaswarnke.de>  Fri, 06 Sep 2019 19:30:00 +0200

crystal-facet-uml (1.14.1) unreleased; urgency=medium

  [ Andreas Warnke ]
  * background image added to intro screen.
  * compatibility to GTK 3.6 established, newer features replaced
  * pthread dependency replaced by glib functions