@@ -15,6 +15,7 @@
 #include "geometry_rectangle_test.h"
 #include "geometry_connector_test.h"
 #include "geometry_non_linear_scale_test.h"
+#include "gui_sketch_nav_tree_test.h"
 #include "io_format_writer_test.h"
 #include "json_tokenizer_test.h"
 #include "json_import_to_database_test.h"
@@ -110,6 +111,7 @@ int main (int argc, char *argv[]) {
         test_runner_run_suite( &runner, utf8stringbuf_test_get_list() );
         test_runner_run_suite( &runner, utf8string_test_get_list() );
         /* test_runner_run_suite( &runner, utf8stringbuf_performance_get_list() ); -- performance measurements are not reliable - depend on system config+load */
+        test_runner_run_suite( &runner, gui_sketch_nav_tree_test_get_list() );
     }
 
     /* module tests which involve multiple software units */
